test/syc/bad/duptype.c
/*
 * Duplicate identifier 'foo'
 */

typedef long foo;
typedef int foo;
